Test/bad/coverage/simple_missing_s.tt
import Data.Nat

pred : Nat -> Nat
pred Z = Z